# ai-vehicle-rental-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Vehicles Rental.postman_collection.json  ai-vehicle-rental.postman_collection.json  cronjob  manage.py  pyproject.toml  requirements.txt
reservations/: admin.py  models.py  serializers.py  urls.py  views.py
reservations/migrations/: 0001_initial.py
reservations/templates/: invoice.txt
user_accounts/: admin.py  models.py  serializers.py  urls.py  views.py
user_accounts/migrations/: 0001_initial.py  0002_alter_useraccountdetails_drivers_licence_and_more.py  0002_remove_useraccount_role.py  0002_rename_drivers_licence_userprofile_drivers_license.py  0003_useraccount_role.py
user_accounts/templates/: account_verification.html  account_verification.txt  delete_confirmation.html  delete_confirmation.txt  invoice.html
utils/: braintree_utils.py  image_renamer.py  send_emails.py
vehicles/: admin.py  models.py  serializers.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_alter_pricing_id_alter_vehicle_id_and_more.py  0002_alter_vehicle_picture1.py  0003_alter_vehicledetails_mileage.py  0003_pricing_is_deleted_vehicle_is_deleted_and_more.py  0004_alter_vehiclebrand_name_alter_vehiclemodel_name.py  0004_vehicle_is_deleted.py  0005_vehicle_image1_vehicle_image2_vehicle_image3_and_more.py  0006_alter_vehicle_image1.py  0007_alter_vehicle_image1_alter_vehicle_image2_and_more.py  (+1 more)
vehicles_rental/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
